--- a/NHibernateDataProvider/NHibernateDataProvider.csproj
+++ b/NHibernateDataProvider/NHibernateDataProvider.csproj
@@ -37,6 +37,9 @@
     <Reference Include="NHibernate">
       <HintPath>..\NHibernate-4.0.3.GA-bin\Required_Bins\NHibernate.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\NHibernate-4.0.3.GA-bin\Required_Bins\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
