--- a/TestMVC/TestMVC.csproj
+++ b/TestMVC/TestMVC.csproj
@@ -133,6 +133,14 @@
     <Content Include="Content\style.css" />
     <Content Include="Global.asax" />
     <Content Include="hibernate.cfg.xml" />
+    <None Include="Scripts\jquery-1.8.3.intellisense.js" />
+    <Content Include="Scripts\jquery-1.8.3.js" />
+    <Content Include="Scripts\jquery-1.8.3.min.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -141,6 +149,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\Web.config" />
+    <Content Include="Views\Events\AddEventdas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Events\AddEvent.cshtml" />
