--- a/TestMVC/packages.config
+++ b/TestMVC/packages.config
@@ -3,6 +3,8 @@
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net45" />
+  <package id="jQuery" version="1.8.3" targetFramework="net45" />
+  <package id="jQuery.Validation" version="1.8.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.ru" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net45" />
@@ -16,6 +18,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.ru" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.ru" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http.ru" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
