--- a/TestMVC/TestMVC.csproj
+++ b/TestMVC/TestMVC.csproj
@@ -132,7 +132,6 @@
     <Content Include="App_Data\EventsSource.sdf" />
     <Content Include="Content\style.css" />
     <Content Include="Global.asax" />
-    <Content Include="hibernate.cfg.xml" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.3.js" />
     <Content Include="Scripts\jquery-1.8.3.min.js" />
@@ -141,7 +140,9 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -173,13 +174,13 @@
     <Content Include="Views\Error\NotFound.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Business\Business.csproj">
+    <ProjectReference Include="..\Business\Events.Business.csproj">
       <Project>{9ca50b80-ef7b-4fab-998a-cf559e16e77c}</Project>
-      <Name>Business</Name>
+      <Name>Events.Business</Name>
     </ProjectReference>
-    <ProjectReference Include="..\NHibernateDataProvider\NHibernateDataProvider.csproj">
+    <ProjectReference Include="..\NHibernateDataProvider\Events.NHibernateDataProvider.csproj">
       <Project>{db21a90c-dbd5-4738-b656-ef130c4aa77c}</Project>
-      <Name>NHibernateDataProvider</Name>
+      <Name>Events.NHibernateDataProvider</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
