--- a/TestMVC/Web.config
+++ b/TestMVC/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate"/>
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -58,4 +59,15 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  
+<hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+  <session-factory>
+    <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
+    <property name="dialect">NHibernate.Dialect.MsSqlCeDialect</property>
+    <property name="connection.driver_class">NHibernate.Driver.SqlServerCeDriver</property>
+    <property name="connection.connection_string">Data Source=(local);Initial Catalog=EventsSource.sdf</property>
+    
+    <property name="show_sql">true</property>
+  </session-factory>
+</hibernate-configuration>
 </configuration>
