--- a/TestMVC/Web.config
+++ b/TestMVC/Web.config
@@ -65,7 +65,7 @@
     <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
     <property name="dialect">NHibernate.Dialect.MsSqlCeDialect</property>
     <property name="connection.driver_class">NHibernate.Driver.SqlServerCeDriver</property>
-    <property name="connection.connection_string">Data Source=(local);Initial Catalog=EventsSource.sdf</property>
+    <property name="connection.connection_string">Data Source=D:\Документы\ISM\MVC_project\TestMVC\App_Data\EventsSource.sdf</property>
     
     <property name="show_sql">true</property>
   </session-factory>
