MSSQL CE issue fix
System.Data.blablalba moved to /bin directory, so it works now, but path
to db is still direct

--- a/NHibernateDataProvider/Events.NHibernateDataProvider.csproj
+++ b/NHibernateDataProvider/Events.NHibernateDataProvider.csproj
@@ -44,9 +44,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\NHibernate-4.0.3.GA-bin\Required_Bins\System.Data.SqlServerCe.dll</HintPath>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-      <Private>True</Private>
+      <HintPath>..\..\..\..\..\..\Program Files\Microsoft SQL Server Compact Edition\v4.0\Desktop\System.Data.SqlServerCe.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
