--- a/TestMVC/bin/TestMVC.dll.config
+++ b/TestMVC/bin/TestMVC.dll.config
@@ -9,6 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate"/>
   </configSections>
+  <connectionStrings>
+    <add name ="db" connectionString="Data Source=C:\Users\Solari\Documents\GitHub\MVC_project\TestMVC\App_Data\EventsSource.sdf"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -65,9 +68,10 @@
     <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
     <property name="dialect">NHibernate.Dialect.MsSqlCeDialect</property>
     <property name="connection.driver_class">NHibernate.Driver.SqlServerCeDriver</property>
-    <property name="connection.connection_string">Data Source=C:\Users\Solari\Documents\GitHub\MVC_project\TestMVC\App_Data\EventsSource.sdf</property>
+    <property name="connection.connection_string_name">db</property>
     
     <property name="show_sql">true</property>
   </session-factory>
+ 
 </hibernate-configuration>
 </configuration>
