--- a/TestMVC/Web.config
+++ b/TestMVC/Web.config
@@ -7,10 +7,10 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate"/>
+    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
   </configSections>
   <connectionStrings>
-    <add name ="db" connectionString="Data Source=C:\Users\Solari\Documents\GitHub\MVC_project\TestMVC\App_Data\EventsSource.sdf"/>
+    <add name="db" connectionString="Data Source=D:\Документы\ISM\MVC_project\TestMVC\App_Data\EventsSource.sdf" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -60,18 +60,23 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  
-<hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
-  <session-factory>
-    <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
-    <property name="dialect">NHibernate.Dialect.MsSqlCeDialect</property>
-    <property name="connection.driver_class">NHibernate.Driver.SqlServerCeDriver</property>
-    <property name="connection.connection_string_name">db</property>
-    
-    <property name="show_sql">true</property>
-  </session-factory>
- 
-</hibernate-configuration>
+  <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+    <session-factory>
+      <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
+      <property name="dialect">NHibernate.Dialect.MsSqlCeDialect</property>
+      <property name="connection.driver_class">NHibernate.Driver.SqlServerCeDriver</property>
+      <property name="connection.connection_string_name">db</property>
+      <property name="show_sql">true</property>
+    </session-factory>
+  </hibernate-configuration>
 </configuration>
