--- a/TestMVC/packages.config
+++ b/TestMVC/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="net45" />
+  <package id="Autofac.Mvc3" version="2.6.3.862" targetFramework="net45" />
+  <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net45" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net45" />
