--- a/TestMVC/Web.config
+++ b/TestMVC/Web.config
@@ -10,7 +10,7 @@
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
   </configSections>
   <connectionStrings>
-    <add name="db" connectionString="Data Source=D:\Документы\ISM\MVC_project\TestMVC\App_Data\EventsSource.sdf" />
+    <add name="db" connectionString="Data Source=C:\Users\Solari\Documents\GitHub\MVC_project\TestMVC\App_Data\EventsSource.sdf" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
